FollowerStore.log
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:127: error: cannot find symbol
            ptr = tail.getPrev();
            ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:128: error: cannot find symbol
            while(ptr != head){
                  ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:129: error: cannot find symbol
                if(tmp.compareTo(ptr.getValue())!= compareFactor){
                                 ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:130: error: cannot find symbol
                    tmp2.setPrev(ptr);
                                 ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:131: error: cannot find symbol
                    tmp2.setNext(ptr.getNext());
                                 ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:132: error: cannot find symbol
                    ptr.setNext(tmp2);
                    ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:136: error: cannot find symbol
                ptr = ptr.getPrev();
                ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:136: error: cannot find symbol
                ptr = ptr.getPrev();
                      ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:153: error: cannot find symbol
            ptr = tail.getPrev();
            ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:154: error: cannot find symbol
            while(ptr != head){
                  ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:155: error: cannot find symbol
                if(tmp.getValue().compareTo(ptr.getValue().getValue())!= compareFactor){
                                            ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:156: error: cannot find symbol
                    tmp2.setPrev(ptr);
                                 ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:157: error: cannot find symbol
                    tmp2.setNext(ptr.getNext());
                                 ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:158: error: cannot find symbol
                    ptr.setNext(tmp2);
                    ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:162: error: cannot find symbol
                ptr = ptr.getPrev();
                ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
.\uk\ac\warwick\java\cs126\services\SortedDoublyLinkedList.java:162: error: cannot find symbol
                ptr = ptr.getPrev();
                      ^
  symbol:   variable ptr
  location: class SortedDoublyLinkedList<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class SortedDoublyLinkedList
    V extends Comparable<V> declared in class SortedDoublyLinkedList
16 errors
